Rewrote retrieving and displaying stats (year, month, today)

--- a/templates/stats.ejs
+++ b/templates/stats.ejs
@@ -1,3 +1,5 @@
-<div class="item">
-  <p><%= item.key %> : <%= item.value %></p>
+<div class="stats">
+  <p class="year" >Year:  <%= stats.year  || 'N/A' %></p>
+  <p class="month">Month: <%= stats.month || 'N/A' %></p>
+  <p class="today">Today: <%= stats.today || 'N/A' %></p>
 </div>
