Added stats for week (7 days back)

--- a/templates/stats.ejs
+++ b/templates/stats.ejs
@@ -1,6 +1,7 @@
 <div class="stats">
   <p class="year" ><span class="label">Year</span>          <%= stats.year  || '0' %></p>
   <p class="month"><span class="label">Month</span>         <%= stats.month || '0' %></p>
+  <p class="week"><span class="label">Week</span>           <%= stats.week || '0' %></p>
   <p class="yesterday"><span class="label">Yesterday</span> <%= stats.yesterday || '0' %></p>
   <p class="today"><span class="label">Today</span>         <%= stats.today || '0' %></p>
 </div>
