Added average stats

--- a/templates/stats.ejs
+++ b/templates/stats.ejs
@@ -4,4 +4,5 @@
   <p class="week"><span class="label">Week</span>           <%= stats.week || '0' %></p>
   <p class="yesterday"><span class="label">Yesterday</span> <%= stats.yesterday || '0' %></p>
   <p class="today"><span class="label">Today</span>         <%= stats.today || '0' %></p>
+  <p class="average"><span class="label">Average</span>     <%= stats.average || '0' %></p>
 </div>
