Adding a bit of visual flair and cleaning up JS code in couch view, smoke.js

--- a/templates/stats.ejs
+++ b/templates/stats.ejs
@@ -1,5 +1,5 @@
 <div class="stats">
-  <p class="year" >Year:  <%= stats.year  || 'N/A' %></p>
-  <p class="month">Month: <%= stats.month || 'N/A' %></p>
-  <p class="today">Today: <%= stats.today || 'N/A' %></p>
+  <p class="year" ><span class="label">Year</span>  <%= stats.year  || '0' %></p>
+  <p class="month"><span class="label">Month</span> <%= stats.month || '0' %></p>
+  <p class="today"><span class="label">Today</span> <%= stats.today || '0' %></p>
 </div>
