--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,34 @@
 body
   { font-family: Helvetica, sans-serif;
-    background: url('../images/cigarette.png') bottom left no-repeat;
-    padding-bottom: 180px; }
+    margin: 2em; }
+
+button
+  { font-size: 18px;
+    color: #222;
+    padding: 0.25em 1em 0.25em 1em;
+    border: 1px solid #222;
+    background-color: #ccc;
+    border-radius: 5px;
+    -moz-border-radius: 5px; }
+
+#stats
+  { margin: 1em 0 1em 0;
+    height: 5em; }
+#stats p
+  { font-size: 24px;
+    margin: 0;
+    padding: 0; }
+#stats p.today
+  { font-size: 34px;
+    margin-top: 0.25em; }
+#stats p .label
+  { color: #999;
+    font-size: 14px;
+    text-transform: uppercase;
+    width: 4em;
+    display: block;
+    float: left;
+    position: relative;
+    top: 0.25em; }
+#stats p.today .label
+  { top: 0.45em; }
