--- a/templates/stats.ejs
+++ b/templates/stats.ejs
@@ -4,5 +4,5 @@
 </section>
 <section class="column">
   <p class="week"><span class="label">Week</span>           <span class="value"><%= stats.week || '0' %></span></p>
-  <p class="yesterday"><span class="label">Yesterday</span> <span class="value"><%= stats.yesterday || '0' %></span></p>
+  <p class="yesterday"><span class="label">Y'day</span> <span class="value"><%= stats.yesterday || '0' %></span></p>
 </section>
