Make background black

--- a/css/screen.css
+++ b/css/screen.css
@@ -7,7 +7,7 @@ header
 
 body
   { color: #fff;
-    background: #19191a;
+    background: #000;
     font-family: Helvetica, sans-serif;
     letter-spacing: -0.1em;
     margin: 2em 4em; }
