Fixing label in stats; it's "7 days" (sliding window), not "this week"

--- a/templates/stats.ejs
+++ b/templates/stats.ejs
@@ -3,6 +3,6 @@
   <p class="month"><span class="label">Month</span>         <span class="value"><%= stats.month || '0' %></span></p>
 </section>
 <section class="column">
-  <p class="week"><span class="label">Week</span>           <span class="value"><%= stats.week || '0' %></span></p>
+  <p class="week"><span class="label">7 days</span>           <span class="value"><%= stats.week || '0' %></span></p>
   <p class="yesterday"><span class="label">Y'day</span> <span class="value"><%= stats.yesterday || '0' %></span></p>
 </section>
