Added "development version" badge for local version

--- a/css/screen.css
+++ b/css/screen.css
@@ -106,3 +106,14 @@ svg
     bottom: 2em;
     width: 100%;
     height: 60px; }
+
+#development-badge {
+  font-size: 10px;
+  color: #333;
+  background: #131313;
+  padding: 0.5em 1em;
+  height: 1em;
+  width: 95%;
+  position: absolute;
+  top: 0; left: 0;
+}
