--- a/css/screen.css
+++ b/css/screen.css
@@ -10,7 +10,7 @@ body
     background: #000;
     font-family: Helvetica, sans-serif;
     letter-spacing: -0.1em;
-    margin: 2em 4em; }
+    margin: 2em 4em 0em 2em; }
 
 a { color: #fff; }
 
@@ -100,12 +100,13 @@ header #average .value
     font-weight: normal;
     letter-spacing: -0.2em; }
 
-svg
-  { position: absolute;
+#chart
+  { width: 100%;
+    height: 60px;
+    display: block;
+    position: absolute;
     left: 0;
-    bottom: 2em;
-    width: 100%;
-    height: 60px; }
+    bottom: 5px; }
 
 #development-badge {
   font-size: 10px;
