--- a/css/screen.css
+++ b/css/screen.css
@@ -16,6 +16,11 @@ a { color: #fff; }
 
 p { margin: 0; padding: 0; }
 
+#container {
+  width: 600px;
+  margin: 0 auto;
+}
+
 header
   { float: left;
     width: 11em;
